# mobiumata

./: Cargo.toml  README.md  index.html
docs/: index.html  mobiumata_virtual_display.wasm
mobiumata-automaton/: Cargo.toml
mobiumata-automaton/src/: lib.rs
mobiumata-common/: Cargo.toml
mobiumata-common/src/: lib.rs
mobiumata-common/src/automaton/: mod.rs
mobiumata-common/src/display/: compressor.rs  hsv.rs  mod.rs  ws2812.rs
mobiumata-common/src/network/: mod.rs
mobiumata-common/src/state/: mod.rs
mobiumata-control/: Cargo.toml
mobiumata-control/.cargo/: config.toml
mobiumata-control/src/: lib.rs  main.rs
mobiumata-display/: Cargo.toml
mobiumata-display/.cargo/: config.toml
mobiumata-display/src/: main.rs
mobiumata-wasm/: Cargo.toml
mobiumata-wasm/src/: lib.rs
mobiumata-ws2812/: Cargo.toml
mobiumata-ws2812/src/: lib.rs
