[package]
name = "mobiumata-common"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
embedded-graphics = { version = "0.8.1" }
embedded-graphics-core = { version = "0.4.0" }
heapless = { version = "0.8.0", features = ["defmt-03"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
smart-leds = "0.4.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
