[package]
name = "mobiumata-common"
version = "0.1.0"
edition = "2021"

[dependencies]
cyw43 = { version = "0.1.0", features = ["defmt"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
defmt = "0.3.8"
embassy-executor = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-net = { version = "0.4.0", features = ["defmt", "udp", "dhcpv4"] }
embassy-rp = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt"] }
embedded-graphics = { version = "0.8.1" }
embedded-graphics-core = { version = "0.4.0" }
fixed = "1.27.0"
fixed-macro = "1.2.0"
heapless = { version = "0.8.0", features = ["defmt-03"] }
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
static_cell = "2.1.0"
