[package]
name = "mobiumata-display"
version = "0.1.0"
edition = "2021"

[dependencies]
mobiumata-common = { path = "../mobiumata-common" }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
smart-leds = "0.4.0"
pio = "0.2.1"
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
